k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${K8S_NAMESPACE}
  labels:
    name: ${K8S_NAMESPACE}
    app.kubernetes.io/managed-by: cloud-build
